# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  28 Dec 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix /sbin/rc to mount /dev/pts with gid=5 and mode=0620, bug #36088.

* rc-scripts 1.4.3.12p2 (27 Dec 2003)

  26 Dec 2003; Martin Schlemmer <azarah@gentoo.org>:

    Update code to generate /dev from /sys.  Add UDEV_NO_SLEEP=1 for
    hack to not make udev sleep - its not needed as these entries
    are already present, and not a hotplug event.

    Update /etc/init.d/{consolefont,numlock} to work with udev managed
    /dev that have devfs layout.

  14 Dec 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix type-o in /sbin/rc, bug #34837.

* rc-scripts 1.4.3.12p1 (26 Nov 2003)

  26 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix /etc/init.d/halt.sh to reset pam_console permissions, else
    the next bootup might be done with some non-root nodes which cause
    some odd issues.

    Add code to generate /dev from sysfs entries - not much it currently
    support but block/tty devices, but it is a start for when we have
    full sysfs support in all drivers.

    Revert carrier detection check, as there is currently too many
    issues with it, bug #33272.

    Make sure we mount already mounted mount (done in /sbin/rc) with
    correct permissions, etc, bug #33764.  Modified /etc/init.d/checkroot
    for this.

  16 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix carrier detection - we need to do a 'ifconfig $IFACE up' else
    some drivers do not set the IFF_RUNNING bit, bug #33272, thanks to
    Jason Rhinelander <jason-gentoo@gossamer-threads.com> for the fix.

  15 Nov 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add a warning to cachedepends.awk if a rc-script's name ends in
    '.sh', bug #33134.  Add better error checking to /sbin/depscan.sh.
