@@ -7,6 +7,13 @@ BEGIN {
 
 	extension("/lib/rcscripts/filefuncs.so", "dlload")
 
+	# Get our environment variables
+	SVCDIR = ENVIRON["SVCDIR"]
+	if (SVCDIR == "") {
+		eerror("Could not get SVCDIR!")
+		exit 1
+	}
+
 	pipe = "ls -1 /etc/env.d/."
 	while ((pipe | getline tmpstring) > 0)
 		scripts = scripts " /etc/env.d/" tmpstring
