@@ -2,6 +2,13 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  29 Dec 2003; Martin Schlemmer <azarah@gentoo.org>:
+
+    Update /sbin/depscan.sh, /sbin/env-update.sh, src/awk/cachedepends.awk,
+    src/awk/gendepends.awk and src/awk/genenviron.awk to use ENVIRON rather
+    then gawk -v.  Also add some tests to see if we got the environment
+    variables.
+
   28 Dec 2003; Martin Schlemmer <azarah@gentoo.org>:
 
     Fix /sbin/rc to mount /dev/pts with gid=5 and mode=0620, bug #36088.
